- Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
- Changed: Updated OpenZWave (and configuration files)
- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
- Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW
- Implemented: Blinds T1 till T13 new supports the Stop button
- Implemented: Devices, Log icon for Blinds
- Implemented: Blockly/Lua Set SetPoint option
- Implemented: Estonian Language support (big thanks to Kuido)
- Implemented: EvohomeWeb support (Thanks to Gordon3!)
- Implemented: General/Text sensor now able to be shared
- Implemented: I2C BME280 sensor (temp+hum+baro)
- Implemented: I2C for non arm systems
- Implemented: InfluxDB Data push
- Implemented: Latvian Language support (big thanks to Edgars)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Dummy Temp/Hum/Baro sensor
- Implemented: Notification for Alert Sensor via udevice JSON call
- Implemented: Onkyo AV Receiver (Thanks to dwmw2!)
- Implemented: Option to replace an Meter device
- Implemented: OZW, Added support for Atmospheric Pressure sensor
- Implemented: Python Plugin System
- Implemented: RFXtrx Lucci Fan implemented
- Implemented: RFXtrx RFY2 protocol implemented
- Implemented: RFXtrx Kangtai / Cotech implemented
- Implemented: RTL433 (Thanks to Petri Ahone!)
- Implemented: SolarEdgeAPI, support for multiple inverters
- Implemented: Support for Ble Box hardware
- Implemented: Support for different usage/return costs for electricity
- Implemented: Support for Intergas InComfort LAN2RF Gateway
- Implemented: Support for Open Weather Map
- Implemented: Support for Open Web Net
- Implemented: Support for XiaomiGateway Gateway
- Implemented: Support for YeeLight
- Implemented: Support for Youless LS120
- Implemented: Switch type 'Door Lock'