@@ -1676,6 +1676,7 @@
 					<option value="80" data-i18n="Temperature">Temperature</option>
 					<option value="82" data-i18n="Temp+Hum">Temp+Hum</option>
 					<option value="84" data-i18n="Temp+Hum+Baro">Temp+Hum+Baro</option>
+                    <option value="247" data-i18n="Temp+Baro">Temp+Baro</option>
 					<option value="5" data-i18n="Text">Text</option>
 					<option value="8" data-i18n="Thermostat Setpoint">Thermostat Setpoint</option>
 					<option value="248" data-i18n="Usage (Electric)">Usage (Electric)</option>
